[project]
name = "my-langgraph-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.7",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.2",
    "langsmith>=0.4.5",
    "notebook>=7.4.4",
    "python-dotenv>=1.1.1",
]
